# data-backup-manager

./: Cargo.toml  README.md  build.rs
src/: background_backup.rs  config.rs  log_manager.rs  main.rs  validation.rs
