[package]
name = "data-backup-manager"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = ["Win32_System_Console"] }

[dependencies]
chrono = "0.4.42"
fs_extra = "1.3.0"
tokio = { version = "1.47.1", features = ["full"] }
winreg = "0.55.0"
winapi = { version = "0.3", features = ["winuser", "wincon", "synchapi", "errhandlingapi", "winerror"] }
simplelog = "0.12.2"
log = "0.4.28"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.18"
serde_json = "1.0.145"

[build-dependencies]
winres = "0.1.12"
